src-ken&y/objects/Serial__c.object
<CustomObject>
    <customHelpPage>HelpSerials</customHelpPage>
    <fields>
        <fullName>Allocated_SKID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocated SKID</label>
        <referenceTo>SKID__c</referenceTo>
        <relationshipLabel>Allocated Serials</relationshipLabel>
        <relationshipName>Allocated_Serials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Reentry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the serial to enter the system again in case the serial has been voided or removed or shipped with return expectations.</description>
        <label>Allow Re-entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Book_Value__c</fullName>
        <label>Book Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Serials</relationshipLabel>
        <relationshipName>Serials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fixed_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fixed Asset</label>
        <referenceTo>Fixed_Asset__c</referenceTo>
        <relationshipLabel>Serials</relationshipLabel>
        <relationshipName>Serials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Serials</relationshipLabel>
        <relationshipName>Serials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current skid this serial exists.</description>
        <inlineHelpText>The current skid this serial exists.</inlineHelpText>
        <label>SKID</label>
        <referenceTo>SKID__c</referenceTo>
        <relationshipLabel>Serials</relationshipLabel>
        <relationshipName>Serials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>In-Transit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temporary_Value_Holder__c</fullName>
        <label>Temporary Value Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key2__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Serial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SKID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Serial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Verify_Unlink_Asset_To_Serial</fullName>
        <active>true</active>
        <description>The user can  remove the link of the asset to the serial number only if the item SKID is not already flagged as a rental.</description>
        <errorConditionFormula>AND( ISCHANGED(Fixed_Asset__c),
     
      SKID__r.Rental__c  = TRUE ,
 PRIORVALUE(Fixed_Asset__c) !=NULL
  
)</errorConditionFormula>
        <errorMessage>This serial number  cannot be detached from the Asset as the item SKID is already flagged as rental.</errorMessage>
    </validationRules>
</CustomObject>